# pac_rf_project

./: CMakeCache 2.txt  CMakeLists 2.txt  CMakeLists.txt  CMakeLists.txt.bak  Makefile 2  README.md
include/: bit_parser.h  commands.h  config.h  handlers.h  interface.h  logger.h  nmea.h  queue_manager.h
src/: main.c.bak
src/cli/: main.c
src/common/: bit_parser.c  commands.c  handlers.c  handlers.c.bak  interface.c  logger.c  nmea.c  queue_manager.c
src/gui/: main_gui.c  main_gui.c.bak
